# llm-jailbreak-detector

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  Untitled-2_fixed_eval.ipynb  WEEK4_FINAL.md  ch6_system_demo_revised.md  pyproject.toml  requirements.txt
Dataset v1/: BIPIA — indirect prompt injection in RAG-like contexts.bib
data/: sample.csv
demo/: DEMO_SCRIPT.md  README.md  expected_outputs.jsonl  invalid_missing_text.jsonl  sample_inputs.jsonl
docs/: BASELINES.md  CH6_REVIEWER_QA.md  DEMO_GUIDE.md  Design_Documentation.md  HLD.md  MODULE_INTERFACES.md  OPS_SECURITY_PRIVACY.md  PROJECT_PLAN.md  Project_Development_Plan.md  REQUIREMENTS_SPEC.md  Requirements_Specification.md  TESTING.md  TEST_RESULTS.md  TRACEABILITY_MATRIX.md  Testing_Documentation.md  User_Manual.md  data_schema.md
examples/: sample_inputs.jsonl
reports/: .gitkeep  week1_report.txt
scripts/: benchmark_thesis_runtime.py  build_adv2_mitigation_table.py  build_data_stats.py  build_results_table.py  build_rules_baseline_table.py  build_split_stats.py  build_v1_dataset.py  build_week6_tables.py  build_week7_tables.py  calibrate_threshold.py  check_thesis_assets.py  compare_clean_vs_adv.py  dataset_utils.py  dump_error_cases.py  eval_lora_from_run.py  eval_week6_grid.py  eval_week7_grid.py  eval_with_val_threshold.py  ingest_bipia.py  ingest_jailbreakdb.py  ingest_jbb_behaviors.py  lock_week7_eval_pack.py  make_adv2_set.py  make_rewrite_set.py  make_unicode_adversarial_set.py  plot_predictions.py  prep_thesis_ingredients.ps1  prep_thesis_ingredients.sh  render_ch6_sequence.ps1  render_diagrams.ps1  render_diagrams.sh  render_thesis_diagrams.ps1  (+10 more)
(+181 files in other folders)
