[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-jailbreak-detector"
version = "0.1.0"
description = "LLM jailbreak and prompt injection detector."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "datasets>=2.18",
  "jsonlines>=4.0",
  "huggingface_hub>=0.36",
  "fsspec>=2023.5.0",
  "pytest>=7.0",
  "torch>=2.1",
  "transformers>=4.38",
  "peft>=0.11",
  "protobuf>=4.21",
  "sentencepiece>=0.1.99",
]

[project.scripts]
jbd = "llm_jailbreak_detector.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
