[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-jailbreak-detector"
version = "0.1.1"
description = "LLM jailbreak and prompt injection detector."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "jsonlines>=4.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
lora = [
  "torch>=2.1",
  "transformers>=4.38",
  "peft>=0.11",
  "huggingface_hub>=0.36",
  "protobuf>=4.21",
  "sentencepiece>=0.1.99",
  "fsspec>=2023.5.0",
]
eval = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "datasets>=2.18",
]
dev = [
  "pytest>=7.0",
]

[project.scripts]
jbd = "llm_jailbreak_detector.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
